<resources>
    <string name="app_name">Shred.io</string>
    <string name="title_activity_maps">Shred.io</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="rail">Rail</string>
    <string name="ledge">Ledge</string>
    <string name="stairs">Stairs</string>
    <string name="ramp">Ramp</string>
    <string name="gap">Gap</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="name_placeholder">Your Spot Name Here</string>
    <string name="description_placeholder">Information about the spot here</string>
    <string name="tags_placeholder">List of Spot Tags Here</string>
    <string name="directions">Get directions!</string>
    <string name="tagTitle">Tags: </string>
    <string name="select_tags">Select any tags that apply!</string>
    <string name="take_picture">Take picture!</string>
    <string name="upload">Submit</string>
    <string name="rating">Leave a rating</string>
    <string name="pref_rail">Rail</string>
    <string name="pref_stairs">Stairs</string>
    <string name="pref_ledge">Ledge</string>
    <string name="pref_gap">Gap</string>
    <string name="pref_ramp">Ramp</string>
</resources>
