<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="60dp"
    android:background="@drawable/loading_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/logo_white_red"
        android:layout_marginBottom="25dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        app:errorEnabled="true"
        >
        <EditText
            android:id="@+id/signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textSize="@dimen/field_textsize"
            android:textStyle="bold"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textSize="@dimen/field_textsize"
            android:textStyle="bold"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_password_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <EditText
            android:id="@+id/signup_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password_repeat"
            android:textSize="@dimen/field_textsize"
            android:textStyle="bold"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup_signup_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/customRed"
        android:text="@string/signup_text"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        />
</LinearLayout>